--- a/vueboot/pom.xml
+++ b/vueboot/pom.xml
@@ -92,38 +92,16 @@
 			<artifactId>springfox-swagger-ui</artifactId>
 			<version>2.4.0</version>
 		</dependency>
-		<dependency> 
-			<groupId> org.springframework.boot </groupId> 
-			<artifactId> spring-boot-starter-security </artifactId> 
-		</dependency> 
-		<dependency> 
-			<groupId> io.jsonwebtoken </groupId> 
-			<artifactId> jjwt </artifactId> 
-			<version> 0.9.1 </version> 
-		</dependency>
 		<dependency>
-        <groupId>org.slf4j</groupId>
-        <artifactId>slf4j-api</artifactId>
-        <version>1.7.7</version>
-    </dependency>
-    <dependency>
-		    <groupId>org.projectlombok</groupId>
-		    <artifactId>lombok</artifactId>
-		    <version>1.18.10</version>
-		    <scope>provided</scope>
-		</dependency>
-    <dependency>
-        <groupId>ch.qos.logback</groupId>
-        <artifactId>logback-classic</artifactId>
-        <version>1.1.2</version>
-        <exclusions>
-            <exclusion>
-                <groupId>org.slf4j</groupId>
-                <artifactId>slf4j-api</artifactId>
-            </exclusion>
-        </exclusions>
-    </dependency>
-    
+    <groupId>io.jsonwebtoken</groupId>
+    <artifactId>jjwt</artifactId>
+    <version>0.9.1</version>
+</dependency>
+<dependency>
+    <groupId>org.slf4j</groupId>
+    <artifactId>slf4j-api</artifactId>
+    <version>1.7.7</version><!--$NO-MVN-MAN-VER$-->
+</dependency>
 	</dependencies>
 
 	<build>
