--- a/ssafy-frontend/package.json
+++ b/ssafy-frontend/package.json
@@ -10,10 +10,13 @@
     "aos": "^3.0.0-beta.6",
     "axios": "^0.19.2",
     "core-js": "^3.6.4",
+    "facebook-login-vuejs": "^2.1.3",
     "firebase": "^7.7.0",
     "jwt-decode": "^2.2.0",
     "register-service-worker": "^1.6.2",
     "vue": "^2.6.11",
+    "vue-facebook-login-component": "^1.4.0",
+    "vue-kakao-login": "^1.0.5",
     "vue-router": "^3.1.5",
     "vue-session": "^1.0.0",
     "vue-simplemde": "^1.0.4",
