--- a/ssafy-frontend/package.json
+++ b/ssafy-frontend/package.json
@@ -15,6 +15,7 @@
     "jwt-decode": "^2.2.0",
     "register-service-worker": "^1.6.2",
     "vue": "^2.6.11",
+    "vue-daum-map": "^1.0.15",
     "vue-facebook-login-component": "^1.4.0",
     "vue-kakao-login": "^1.0.5",
     "vue-router": "^3.1.5",
