--- a/ssafy-frontend/package.json
+++ b/ssafy-frontend/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "aos": "^3.0.0-beta.6",
     "axios": "^0.19.2",
+    "chart.js": "^2.9.3",
     "codemirror": "^5.51.0",
     "core-js": "^3.6.4",
     "facebook-login-vuejs": "^2.1.3",
@@ -16,6 +17,7 @@
     "jwt-decode": "^2.2.0",
     "register-service-worker": "^1.6.2",
     "vue": "^2.6.11",
+    "vue-chartjs": "^3.5.0",
     "vue-codemirror": "^4.0.6",
     "vue-daum-map": "^1.0.15",
     "vue-facebook-login-component": "^1.4.0",
