--- a/ssafy-frontend/package.json
+++ b/ssafy-frontend/package.json
@@ -14,6 +14,7 @@
     "core-js": "^3.6.4",
     "facebook-login-vuejs": "^2.1.3",
     "firebase": "^7.7.0",
+    "js-cookie": "^2.2.1",
     "jwt-decode": "^2.2.0",
     "register-service-worker": "^1.6.2",
     "vue": "^2.6.11",
@@ -27,7 +28,8 @@
     "vue-simplemde": "^1.0.4",
     "vueperslides": "^2.8.2",
     "vuetify": "^2.2.8",
-    "vuex": "^3.1.2"
+    "vuex": "^3.1.2",
+    "vuex-persistedstate": "^2.7.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.1.2",
