0217 | HJ | detail update

--- a/vueboot/src/main/resources/application.properties
+++ b/vueboot/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/a5?useUniCode=yes&characterEncoding=UTF-8&serverTimezone=Asia/Seoul
-spring.datasource.username=root
-spring.datasource.password=dltmdduf5
+spring.datasource.url=jdbc:mysql://192.168.31.107:3306/a5?useUniCode=yes&characterEncoding=UTF-8&serverTimezone=Asia/Seoul
+spring.datasource.username=HJ
+spring.datasource.password=ssafy
 
 mybatis.config-location=classpath:mybatis-config.xml
 logging.level.root=WARN
