--- a/ssafy-frontend/package.json
+++ b/ssafy-frontend/package.json
@@ -12,6 +12,7 @@
     "chart.js": "^2.9.3",
     "codemirror": "^5.51.0",
     "core-js": "^3.6.4",
+    "echarts": "^4.6.0",
     "facebook-login-vuejs": "^2.1.3",
     "firebase": "^7.7.0",
     "js-cookie": "^2.2.1",
@@ -21,6 +22,7 @@
     "vue-chartjs": "^3.5.0",
     "vue-codemirror": "^4.0.6",
     "vue-daum-map": "^1.0.15",
+    "vue-echarts": "^5.0.0-beta.0",
     "vue-facebook-login-component": "^1.4.0",
     "vue-kakao-login": "^1.0.5",
     "vue-router": "^3.1.5",
