--- a/ssafy-frontend/package.json
+++ b/ssafy-frontend/package.json
@@ -18,6 +18,7 @@
     "js-cookie": "^2.2.1",
     "jwt-decode": "^2.2.0",
     "register-service-worker": "^1.6.2",
+    "v-calendar": "^1.0.1",
     "vue": "^2.6.11",
     "vue-chartjs": "^3.5.0",
     "vue-codemirror": "^4.0.6",
