--- a/vueboot/src/main/resources/application.properties
+++ b/vueboot/src/main/resources/application.properties
@@ -3,6 +3,7 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://192.168.31.107:3306/a5?useUniCode=yes&characterEncoding=UTF-8&serverTimezone=Asia/Seoul
 spring.datasource.username=HJ
 spring.datasource.password=ssafy
+spring.datasource.tomcat.validationQuery=SELECT 1
 
 mybatis.config-location=classpath:mybatis-config.xml
 logging.level.root=WARN
